Fixed Alignment
Aligned all elements to the same margins

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -13,7 +13,7 @@
     margin: 20px auto;
 }
 #about-page .body .text{
-    width: 75%;
+    /* width: 100%; */
     /* float: right; */
     /* position: relative; */
     /* min-height: 80%; */
