--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -16,7 +16,7 @@
 
 #projects-page .project-items{
     /* margin: 20px; */
-    width: 80%;
+    /* width: 80%; */
 }
 
 #projects-page .project-items .row .img-thumbnail{
@@ -69,15 +69,18 @@
 
 .title{
     width: 80%;
-    margin: 30px 7%;
+    margin: 30px 0;
     /* box-shadow: -7px 7px 4px rgb(0 0 0 / 25%); */
 }
 
 .title > *{
     background-color: var(--light-purple);
     color: var(--dark-purple);
-    text-align: left;
-    padding: 10px 25px;
-    width: 30%;
-    /* width: fit-content; */
+    /* text-align: left; */
+    padding: 10px 50px;
+    /* width: 30%; */
+    width: fit-content;
+    font-family: 'brandon';
+    font-size: xxx-large;
+    /* font-weight: bold; */
 }
